@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FIDO NetMail/EchoMail
  *
- * $Id: packet.h,v 5.2 2006/10/14 08:52:55 anray Exp $
+ * $Id: packet.h,v 5.3 2006/10/31 15:12:10 anray Exp $
  *
  * Packet structure
  *
@@ -95,9 +95,9 @@ typedef struct
     int attr;					/* Attribute flags */
     int cost;					/* Cost */
     time_t date;				/* Date */
-    unsigned char name_to[MSG_MAXNAME];		/* To name */
-    unsigned char name_from[MSG_MAXNAME];	/* From name */
-    unsigned char subject[MSG_MAXSUBJ];		/* Subject */
+    char name_to[MSG_MAXNAME];			/* To name */
+    char name_from[MSG_MAXNAME];		/* From name */
+    char subject[MSG_MAXSUBJ];			/* Subject */
 
     char *area;					/* EchoMail area or NULL */
 }
